// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
      >
        <fieldset
          class="uv_l0r03j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5p"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <legend
                class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u3v"
            >
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
                for="_r_3_"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_3_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w25"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_adn1w28"
                    id="_r_3_"
                    name="Group.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
                for="_r_9_"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_9_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w25"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_adn1w28"
                    id="_r_9_"
                    name="Group.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`groupField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
      >
        <fieldset
          aria-describedby="_r_f_"
          class="uv_l0r03j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5p"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <div
                class="uv_toi52u0 uv_toi52uv uv_toi52u2j uv_toi52u5j"
              >
                <legend
                  class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
                >
                  ToggleGroupField events
                </legend>
                <span
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42ls9 uv_1do42lsn uv_1do42ls1a uv_1do42ls2m"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u3v"
            >
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
                for="_r_k_"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_k_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w25"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    class="uv_adn1w28"
                    id="_r_k_"
                    name="test.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
                for="_r_q_"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_q_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w25"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    class="uv_adn1w28"
                    id="_r_q_"
                    name="test.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <span
          class="uv_1do42ls0 uv_1do42ls4 uv_1do42ls9 uv_1do42lsp uv_1do42ls1a uv_1do42ls2m"
          id="_r_f_"
          role="status"
        >
          This field is required
        </span>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
